assert-struct/tests/compile_fail/map_pattern_on_vec.stderr
error[E0277]: the type `[i32]` cannot be indexed by `&String`
  --> tests/compile_fail/map_pattern_on_vec.rs:15:19
   |
15 |         items: #{ "key": 42 },
   |                   ^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `&String`
note: required by a bound in `core::slice::<impl [T]>::get`
  --> $RUST/core/src/slice/mod.rs
